<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendDataActivity"
    android:id="@+id/activity_send_data">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout">

        <TextView android:id="@+id/tenant"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="16px"/>

        <TextView android:id="@+id/deviceId"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="16px"/>

        <TextView android:id="@+id/token"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="16px" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/linearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/data_id"
                android:minWidth="100dp"
                android:hint="@string/data_id"/>

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/data_value"
                android:layout_gravity="left"
                android:minWidth="100dp"
                android:hint="@string/value" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                android:onClick="sendMessage"
                android:layout_gravity="right"
                android:id="@+id/button" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send light data"
            android:id="@+id/send_light"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:onClick="sendLight"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send accelerometer data"
            android:id="@+id/send_accelerometer"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:onClick="sendAccelerometer"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wait for commands"
            android:id="@+id/wait_command"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:onClick="waitForCommands"/>

    </LinearLayout>
</RelativeLayout>
